[package]
name = "aws-rust-lambda-tutorials"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[[bin]]
name = "a-handler-1"
path = "src/bin/a-handler-1.rs"

[[bin]]
name = "a-handler-2"
path = "src/bin/a-handler-2.rs"

[[bin]]
name = "b-context-1"
path = "src/bin/b-context-1.rs"

[[bin]]
name = "c-http-events-1"
path = "src/bin/c-http-events-1.rs"

[[bin]]
name = "c-http-events-2"
path = "src/bin/c-http-events-2.rs"

[[bin]]
name = "e-logging-1"
path = "src/bin/e-logging-1.rs"

[dependencies]
aws-config = "1.5.6"
aws-sdk-s3 = "1.51.0"
aws_lambda_events = "0.15.1"
http = "1.1.0"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
serde = "1.0.210"
serde_json = "1.0.128"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
